app/assets/sass/main.scss
/* ... */
 .search-strip__button:active {
  box-shadow:0 0 0 #005eb8
 }
 .search-strip__button.disabled,
 .search-strip__button[disabled=disabled],
 .search-strip__button[disabled] {
  opacity:.5
 }
 .search-strip__button.disabled:hover,
 .search-strip__button[disabled=disabled]:hover,
 .search-strip__button[disabled]:hover {
  background-color:#005eb8;
  cursor:default
 }
 .search-strip__button.disabled:active,
 .search-strip__button[disabled=disabled]:active,
 .search-strip__button[disabled]:active {
  box-shadow:0 2px 0 #00376c;
  top:0
 }
 .search-strip__button:focus,
 .search-strip__button:hover,
 .search-strip__button:link,
 .search-strip__button:visited {
  color:#fff
 }
 .search-strip__button:before {
  background:transparent;
  content:"";
  display:block;
  height:110%;
  left:0;
  position:absolute;
  top:0;
  width:100%
 }
 .search-strip__button:active:before {
  height:120%;
  top:-10%
 }
 .search-strip__button:focus {
  border:3px solid #ffb81c;
  outline:0
 }
 .search-strip__button:before {
  height:0
 }
 @media (min-width:641px) {
  .search-strip__button {
   width:44px
  }
 }
 .search-strip__button img,
 .search-strip__button svg {
  position:relative;
  display:block;
  width:50%;
  height:auto;
  left:25%;
  fill:#fff
 }

 .user-details-bar {
  background-color: #ffffff;
  border: 1px solid #000000;
  color: #0b0c0c;
  padding-bottom: 9px;
  padding-top: 10px;
 }

 .user-details-bar-container {
  max-width: 100%;
  margin: 0 15px;
  font-size: 0;
  text-align: justify;
 }

 .user-details-bar__details {
   display: flex;
   justify-content: space-between;
    vertical-align: top;
    padding-top: 11px;
    padding-bottom: 9px;
    width: 100%;
 }

.user-details-bar__case {
  border-right: 1px solid #000000;
  width: 100%;
  height: 100%;
}

.arrow-before {
  background-color: #4c6272;
  color: white!important;
  &details#nhsuk-details__summary-text{
    color: white!important;
  }
}


.nhsuk-details__summary {
  color: white;
  cursor: pointer;
  display: inline-block;
  padding-left: 24px;
  position: relative;
}
.checkbox-dropdown {
  background-color: white;
  color: black;
}


nav.patient-info span {
  
  
}
nav.patient-info {
  background-color:#d8dde0;
}

nav.patient-info li {
  display: flex;
  justify-content: space-between;
  
}

/*  STAR OF PATIENT DETAILS BAR STYLES*/


  nav.patient-info {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between; 
    border: 1px solid #000000;
    background-color: #ffffff;
    margin-bottom: 20px;
    
  }

    nav.patient-info ul {
      display: flex;
      flex-wrap: nowrap;
      margin: 0;
      padding: 0;
      list-style-type: none;
      justify-content: space-between; 
      width: 100%;
    }

    nav.patient-info li {
      padding: 15px;
      margin-bottom: 0;
      margin-right: 50px;
      font-size: 16px; 
      justify-content: flex-start; 
    }

    nav.patient-info ul li:first-child {
      background-color: #f7d4d1;
      border-right: 1px solid #000000;
      margin-right: 0px;
      width: 15%;
      
   }

    nav.patient-info a {
      padding: 0;
    }

@media (max-width: 729px) {

  nav.patient-info ul{
    display: block;
    
    background-color: #ffffff;
    margin-bottom: 20px;
    }

  nav.patient-info ul li {
    display: block;
    width: 100%;
    
  }
  & nav.patient-info ul li:first-child {
    display: block;
    width: 100%;
    border-right: none;
    
  }
  & nav.patient-info ul li:last-child {
    border: none;
  }
}

/* END PATIENT DETAILS BAR STYLES*/

.checkbox-list {
  margin-top: -31px;
  width: 217px;
  border: 1px solid black;
  background-color: #ffffff;
  position: absolute;
  display: none;
 
  
}

.checkbox-list .nhsuk-checkboxes {
padding: 15px!important;

}

.toggle-label {
  font-size: 15px!important;
}

.toggle-checkbox::before {
  bottom: 0;
  content: '';
  left: 0;
  margin: auto;
  position: absolute;
  top: 0;
  display: block;
  width: 0;
  height: 0;
  border-style: solid;
  border-color: transparent;
  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
  border-width: 7px 0 7px 12.124px;
  border-left-color: inherit;
}

